# lihua

./: .gitignore  ARCHITECTURE.md  PRD.md  README.md  process.md  pyproject.toml  traps.md
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
desktop/src/: App.tsx  api.ts  index.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: AuditSheet.tsx  ConfirmSheet.tsx  HistorySheet.tsx  IconButton.tsx  InputBar.tsx  LihuaLogo.tsx  LogSheet.tsx  LogoSheet.tsx  MemorySheet.tsx  MessageBubble.tsx  MessageList.tsx  ModelSheet.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  ToolCallCard.tsx  WelcomeScreen.tsx
src/lihua/: __init__.py  __main__.py  agent.py  analytics.py  cli.py  config.py  executor.py  intent.py  logging_config.py  memory.py  model_presets.py  plugin_loader.py  prompt_builder.py  router.py  safety.py  self_evolve.py  server.py  skill_generator.py  skill_runner.py  skills.py  tool_defs.py
src/lihua/data/skills/: apt-repository.yaml  audio-control.yaml  battery.yaml  beautify-ubuntu.yaml  bluetooth.yaml  change-theme.yaml  change-wallpaper.yaml  clean-cache.yaml  cleanup-apt.yaml  cleanup-residual.yaml  clipboard-history.yaml  close-app.yaml  cpu-monitor.yaml  cron-job.yaml  default-apps.yaml  desktop-icon.yaml  disk-mount.yaml  disk-usage.yaml  docker-run.yaml  file-association.yaml  file-backup.yaml  file-compress.yaml  file-convert-pdf.yaml  file-encrypt.yaml  file-extract.yaml  file-permission.yaml  file-search.yaml  file-shred.yaml  firewall.yaml  fix-ime.yaml  flatpak-remote.yaml  git-config.yaml  gnome-extension.yaml  gpu-driver.yaml  hardware-info.yaml  hotspot-create.yaml  image-convert.yaml  install-app.yaml  install-appimage.yaml  install-deb.yaml  (+44 more)
systemd/: lihua.service
tests/: test_agent.py  test_audit.py  test_gui_selfcheck.py  test_intent.py  test_logging.py  test_safety.py  test_server_confirm_enrich.py  test_server_file_ops.py  test_server_run_python.py  test_server_run_shell.py  test_skills.py  test_skills_beautify.py  test_skills_desktop_hw.py  test_skills_file_adv.py  test_skills_media_dev.py  test_skills_mirror.py  test_skills_network_sys.py  test_skills_troubleshoot.py  test_tool_defs.py
