[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lihua"
version = "0.8.26"
description = "Lihua 狸花猫 - AI 系统管家，让普通用户也能省心用 Linux"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lihua Contributors" }]
keywords = ["linux", "ai-assistant", "cli", "system-administration", "chinese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Operating System Kernels :: Linux",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
llm = ["litellm>=1.40"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
lihua = "lihua.__main__:main"

[project.urls]
Homepage = "https://github.com/lihua/lihua"
Issues = "https://github.com/lihua/lihua/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lihua"]

[tool.hatch.build.targets.wheel.force-include]
"systemd/lihua.service" = "lihua/data/lihua.service"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: 真实系统调用集成测试（需要手动跑）",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
