[package]
name = "lihua-desktop"
version = "0.8.31"
description = "Lihua 狸花猫 - AI 系统管家桌面端"
authors = ["lihua"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "io-util"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
